kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: web-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-site
  template:
    metadata:
      labels:
        app: web-site
    spec:
      containers:
      - name: django-container
        image: mrfinders/django:0.01
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
