kubernetes/django-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-pod
  labels:
    app: web-site
spec:
  containers:
  - name: django-container
    image: mrfinders/django:0.01
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
